--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,61 +17,73 @@ services:
         max-size: "1000k"
         max-file: "2"
 
-#  api:
-#    image: role-app:latest
-#    deploy:
-#      mode: replicated
-#      replicas: 2
-#      restart_policy:
-#        condition: on-failure
-#    volumes:
-#      - ./storage/logs:/var/www/html/storage/logs
-#    environment:
-#      - CONTAINER_ROLE=api
-#      - REDIS_HOST=redis
-#      - REDIS_PASSWORD=
-#      - REDIS_PORT=6379
-#    logging:
-#      driver: json-file
-#      options:
-#        max-size: "1000k"
-#        max-file: "2"
-#
-#  cron:
-#    image: role-app:latest
-#    deploy:
-#      mode: global
-#      restart_policy:
-#        condition: on-failure
-#    volumes:
-#      - ./storage/logs:/var/www/html/storage/logs
-#    environment:
-#      - CONTAINER_ROLE=cron
-#      - REDIS_HOST=redis
-#      - REDIS_PASSWORD=
-#      - REDIS_PORT=6379
-#    logging:
-#      driver: json-file
-#      options:
-#        max-size: "1000k"
-#        max-file: "2"
-#
-#  workers:
-#    image: role-app:latest
-#    deploy:
-#      mode: replicated
-#      replicas: 2
-#      restart_policy:
-#        condition: on-failure
-#    volumes:
-#      - ./storage/logs:/var/www/html/storage/logs
-#    environment:
-#      - CONTAINER_ROLE=workers
-#      - REDIS_HOST=redis
-#      - REDIS_PASSWORD=
-#      - REDIS_PORT=6379
-#    logging:
-#      driver: json-file
-#      options:
-#        max-size: "1000k"
-#        max-file: "2"
+  web:
+    image: role-app-nginx:latest
+    depends_on:
+      - api
+    ports:
+      - mode: host
+        published: 8181
+        target: 8181
+    deploy:
+      mode: global
+      restart_policy:
+        condition: on-failure
+    logging:
+      driver: json-file
+      options:
+        max-size: "1000k"
+        max-file: "2"
+
+  api:
+    image: role-app:latest
+    deploy:
+      mode: replicated
+      replicas: 2
+      restart_policy:
+        condition: on-failure
+    environment:
+      - CONTAINER_ROLE=api
+      - REDIS_HOST=redis
+      - REDIS_PASSWORD=
+      - REDIS_PORT=6379
+    logging:
+      driver: json-file
+      options:
+        max-size: "1000k"
+        max-file: "2"
+
+  cron:
+    image: role-app:latest
+    deploy:
+      mode: global
+      restart_policy:
+        condition: on-failure
+    environment:
+      - CONTAINER_ROLE=cron
+      - REDIS_HOST=redis
+      - REDIS_PASSWORD=
+      - REDIS_PORT=6379
+    logging:
+      driver: json-file
+      options:
+        max-size: "1000k"
+        max-file: "2"
+
+  workers:
+    image: role-app:latest
+    deploy:
+      mode: replicated
+      replicas: 2
+      restart_policy:
+        condition: on-failure
+    environment:
+      - CONTAINER_ROLE=workers
+      - REDIS_HOST=redis
+      - REDIS_PASSWORD=
+      - REDIS_PORT=6379
+    logging:
+      driver: json-file
+      options:
+        max-size: "1000k"
+        max-file: "2"
